<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mipi_csi_cam_ros2</name>
  <version>1.0.0</version>
  <description>Standalone GStreamer MIPI CSI camera driver for Raspberry Pi libcamera and RK3588 V4L2 backends</description>
  <maintainer email="sverk@example.com">sverk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
